    * viprinet_router: Now able to set required target state via rule
    * windows_agent: Now available as 64 bit version
    * agent_vsphere: fix problem where sensors were missing when
      you queried multiple host systems via vCenter
    * cached checks: no longer output cached data if the age of the
                     cache file is twice the maximum cache age

    Notifications:
    * Flexible Notification can now filter service levels
    * FIX: check_tcp corrected order of parameters in definition

1.2.3i1:
    Core:
    * Agents can send data for other hosts "piggyback". This is being
      used by the vSphere and SAP plugins
    * New variable host_check_commands, that allows the definition of
      an alternative host check command (without manually defining one)
    * New variable snmp_check_interval which can be used to customize
      the check intervals of SNMP based checks
    * setup: Added missing vars rrd_path and rrdcached_sock
    * new variable check_mk_exit_status: allows to make Check_MK service OK,
      even if host in not reachable.
    * set always_cleanup_autochecks to True per default now
    * check_mk: new option --snmptranslate

    Multisite:
    * New availability view for arbitrary host/service collections
    * New option auth_by_http_header to use the value of a HTTP header
      variable for authentication (Useful in reverse proxy environments)
    * New permission that is needed for seeing views that other users
      have defined (per default this is contained in all roles)
    * New path back to the view after command exection with all
      checkboxes cleared
    * Added plugins to config module to make registration of default values
      possible for addons like mkeventd - reset to default values works now
      correctly even for multisite related settings
    * perfometer: Bit values now using base of 1000
    * Added PNP tempate for check_disk_smb
    * Dashboards can now be configured to be reloaded on resizing