@@ -21,6 +21,7 @@
       you queried multiple host systems via vCenter
     * cached checks: no longer output cached data if the age of the
                      cache file is twice the maximum cache age
+    * windows agent: no longer tries to execute directories
 
     Notifications:
     * Flexible Notification can now filter service levels
